--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     </p>
 
 
+    <script type="module" src="js/services/storage.service.js"></script>
+    <script type="module" src="js/services/util.service.js"></script>
+    <script type="module" src="js/services/loc.service.js"></script>
+    <script type="module" src="js/services/map.service.js"></script>
     <script type="module" src="js/app.controller.js"></script>
 </body>
 
