--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="map" style="width: 45%; height: 400px;"></div>
         <div class="location-data">
             <div class="weather-location box"> Weather Location</div>
-            <div class="location-list box">
+            <div class="place-list box">
                 <h3>location table:</h3>
                 <h5>lalala</h5>
                 <h5>ladsds</h5>
