--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <input class="type-search" type="text">
             <button class="btn">GO</button>
-            <button class="btn">My Location</button>
+            <button class="btn my-location" onclick="onGetUserPos()">My Location</button>
         </nav>
     </header>
     <div class="secondary-header">
