render place from search key and rendering the name

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h1>TravelTip</h1>
         <nav>
             <input class="type-search" type="text">
-            <button class="btn">GO</button>
+            <button class="btn" onclick="onGetGeoCode()">GO</button>
             <button class="btn">My Location</button>
         </nav>
     </header>
     <div class="secondary-header">
         <div class="curr-info">
             <h3>location:</h3>
-            <h4>central park new york</h4>
+            <h4 class="location-name">central park new york</h4>
         </div>
         <button class="btn"> Copy Location</button>
     </div>
